# LTlive

./: .env.example  .gitignore  ANALYSIS.md  README.md  docker-compose.yml  plan.md  pyproject.toml
backend/: Dockerfile  analytics.py  app.py  config.py  docker-entrypoint.sh  enrichment.py  gtfs_loader.py  gtfs_rt.py  oxyfi.py  requirements.txt  run_tests.py  stats.py  store.py  traffic_inference.py  trafikverket.py  train_logic.py  trip_utils.py
backend/api/: __init__.py  admin.py  analytics_api.py  debug.py  departures.py  routes_shapes.py  status.py  stops.py  test_api.py  traffic.py  vehicles.py  vehicles_bp.py  weather.py
backend/providers/: __init__.py  bus_provider.py  train_provider.py
backend/stores/: __init__.py  cache.py  gtfs_store.py  site_config_store.py  traffic_store.py  train_store.py  vehicle_store.py
backend/tasks/: __init__.py  scheduler.py  sse_tasks.py
backend/tests/: conftest.py  test_gtfs_rt.py  test_stores.py
docs/architecture/: 01-systemöversikt.md  04-driftsvy.md  (+5 more)
frontend/: admin.css  admin.html  admin.js  analytics-page.css  analytics-page.html  analytics-page.js  analytics.js  api.html  app.js  board.html  board.js  busboard.css  busboard.html  busboard.js  config.js  dashboard.css  dashboard.html  dashboard.js  diag.css  diag.html  diag.js  index.html  stadstrafiken.html  stats.css  stats.html  stats.js  style.css  test.css  test.html  test.js  tib-board.html  tib-board.js  tracer.html  traffic_monitor.css  traffic_monitor.html  traffic_monitor.js  trainboard.css  trainboard.html  trainboard.js
nginx/: Dockerfile  nginx.conf
(+19 files in other folders)
