[project]
name = "ltlive"
version = "1.0.0"
description = "Real-time transit map for Örebro"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["backend"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B905",   # zip strict (Python 3.10+)
    "SIM108", # ternary operator
    "RUF012", # mutable class variable annotations
]

[tool.ruff.lint.isort]
known-first-party = ["stores", "providers", "tasks", "api"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
addopts = "-v --tb=short"
